--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -68,7 +68,7 @@ body(class="site")
                 p=goodie.description
 
     div(class="sub_page" id="Waifu")
-        iframe(src="waifu.html#0")
+        iframe(src="waifu.html")
     div(class="page_title center sub_page" id="Contact" page_title="Contact me")
         p="Wanna get in touch with great me?"
         p="Here you go:"
