Gallery ensure consistent color for gallery arrows

--- a/app/styles/gallery.styl
+++ b/app/styles/gallery.styl
@@ -13,6 +13,7 @@ div.gallery
             text-decoration: none
             opacity: 0.5
             transition: all .2s ease-in-out
+            color: black
 
             &:visited
                 color: black
