Add skype to contacts

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -73,8 +73,10 @@ body(class="site")
         p="Wanna get in touch with great me?"
         p="Here you go:"
         div(class="contact_links")
-            a(href="mailto:douman@gmx.se")
+            a(title="douman@gmx.se" href="mailto:douman@gmx.se")
                 img(height=48 width=48 src="img/close-envelope.png")
+            a(title="Skype: coldgloom", href="skype:coldgloom?call", target="_blank")
+                img(height=48 width=48, src="/img/skype.png")
             a(href="https://github.com/DoumanAsh", target="_blank")
                 img(src="img/github-logo.svg")
 
