Add background images to contact links instead of using img tag

--- a/app/styles/contact.styl
+++ b/app/styles/contact.styl
@@ -5,6 +5,11 @@ div#Contact
         margin-bottom: .5em
     & > div.contact_links
         & > a
+            display: inline-block
+            height: 48px
+            width: 48px
+            background-size: contain
+            background-repeat: no-repeat
             margin: .5em
             &:hover
                 opacity: 0.4
