--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -73,12 +73,9 @@ body(class="site")
         p="Wanna get in touch with great me?"
         p="Here you go:"
         div(class="contact_links")
-            a(title="douman@gmx.se" href="mailto:douman@gmx.se")
-                img(height=48 width=48 src="img/close-envelope.png")
-            a(title="Skype: coldgloom", href="skype:coldgloom?call", target="_blank")
-                img(height=48 width=48, src="/img/skype.png")
-            a(href="https://github.com/DoumanAsh", target="_blank")
-                img(src="img/github-logo.svg")
+            a(title="douman@gmx.se" href="mailto:douman@gmx.se" style="background-image: url('img/close-envelope.png'")
+            a(title="Skype: coldgloom", href="skype:coldgloom?call", target="_blank" style="background-image: url('img/skype.png'")
+            a(href="https://github.com/DoumanAsh", target="_blank" style="background-image: url('img/github-logo.svg'")
 
     div(class="default center sub_page page_title" page_title="Welcome")
         div(class="welcome")
