--- a/app/styles/gallery.styl
+++ b/app/styles/gallery.styl
@@ -3,13 +3,13 @@ div.gallery
         margin: 2rem
 
     & > div.sub_page
-        justify-content: center
         align-items: center
-        align-content: center
 
         & > a
-            font-size: 80px
-            padding: 1rem
+            flex: 4
+            font-size: 100px
+            margin: .2em
+            text-align: center
             text-decoration: none
             opacity: 0.5
             transition: all .2s ease-in-out
@@ -24,35 +24,28 @@ div.gallery
 
         & > div.current
             display: flex
-            flex-direction: column
-            justify-content: center
-            align-items: center
+            flex-flow: column
 
-            width: 1100px
+            flex: 5 0 50%
             background: #333
             box-shadow: 3px 3px 3px 4px rgba(0, 0, 0, 0.4)
 
             & > div.description
                 display: flex
                 flex-direction: column
-                align-items: center
                 text-align: center
-                width: 100%
                 color: white
                 padding: 1rem
                 & > p.title
                     font-weight: 900
                     font-size: 1.2em
                 & > p.details
-                    width: 900px
                     font-weight: 100
                     word-wrap: break-word
 
             & > div.img
+                height: 500px
                 margin-top: 20px
-                display: flex
-                flex: 0 0 auto
-                & > div.inner
-                    flex: 1 1
-                    background-size: contain
-                    background-repeat: no-repeat
+                background-size: contain
+                background-repeat: no-repeat
+                background-position:center
