--- a/app/templates/waifu.jade
+++ b/app/templates/waifu.jade
@@ -8,7 +8,7 @@ include _head.jade
 - var waifu = waifu.data.images.slice(1);
 - waifu.push(first);
 
-body(class="site")
+body()
     div(class="gallery" id="Waifu")
         h1(class="center")="My Waifu Gallery"
         for item, idx in waifu
@@ -17,16 +17,13 @@ body(class="site")
             - var prev_idx = cur_idx === waifu.length ? "" : cur_idx - 1;
             - var next_idx = cur_idx === waifu.length ? 1 :  cur_idx === (waifu.length - 1) ? cur_idx : cur_idx + 1;
             - var link = item.link.replace('http', 'https');
-            - var height = 550;
-            - var width = Math.min(item.width / 1.1, 950);
-            - var style_img = util.format("width: %spx; height: %spx", width, height);
+            - var style_img = "";
             - var style_inner = util.format("background-image: url('%s')", link);
             - var div_page_class = cur_idx  === waifu.length ? "default sub_page flex" : "sub_page flex";
             div(id=cur_idx class=div_page_class)
                 a(href="#" + prev_idx)="«"
                 div(class="current")
-                    div(class="img" style=style_img)
-                        div(class="inner" style=style_inner)
+                    div(class="img" style=style_inner)
                     div(class="description")
                         p(class="title")=item.title
                         p(class="details")=item.description ? item.description : ""
