Replace more png with svg

--- a/app/templates/cv.jade
+++ b/app/templates/cv.jade
@@ -58,9 +58,9 @@ body(class="cv")
                     td(lang="ru")="Контакты:"
                     td
                         a(title="douman@gmx.se", class="link_logo", href="mailto:douman@gmx.se", target="_blank")
-                            img(class="logo", src="/img/close-envelope.png")
+                            img(class="logo", src="/img/close-envelope.svg")
                         a(title="Skype: coldgloom", class="link_logo", href="skype:coldgloom?call", target="_blank")
-                            img(class="logo", src="/img/skype.png")
+                            img(class="logo", src="/img/skype.svg")
 
 
         section
