--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -64,8 +64,9 @@ nav.site
             display: block
 
         & > ul
+            z-index: 1
             border-radius: .2em
-            margin-top: .5em
+            margin-top: .55em
             box-shadow: 3px 3px 3px 4px rgba(0, 0, 0, 0.4)
             padding: 0px
             position: absolute
