Open CV in a separate tab

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -26,7 +26,7 @@ body(class="site")
         div(class="sub")
             a(href="#Contact")="Contact"
         div(class="sub")
-            a(href="cv.html")="CV"
+            a(href="cv.html" target="_blank")="CV"
 
     div(class="sub_page flex goodies" id="Goodies" page_title="My Goodies")
         a(class="sub_link" href="#Goodies_Rust" title="My Rust code" style="background-image: url('img/rust.svg'")
@@ -60,6 +60,7 @@ body(class="site")
 
     div(class="sub_page" id="Waifu")
         iframe(src="waifu.html")
+
     div(class="page_title center sub_page" id="Contact" page_title="Contact me")
         p="Wanna get in touch with great me?"
         p="Here you go:"
