CV: Add opacity on hover for contact links

--- a/app/styles/cv.styl
+++ b/app/styles/cv.styl
@@ -28,6 +28,8 @@ body.cv2
         background-repeat: no-repeat
         margin-right: .5em
         color: black
+        &:hover
+            opacity: 0.4
 
         @media print
             text-decoration: none
