Image re-factoring
1. Home page image should be as background of div
2. Go back & forward in image gallery allows to iterate anew

--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -136,3 +136,8 @@ div.sub_page.flex
 
         & ~ div.default
             display: none //Default is hidden when target element is preceding.
+
+div.img
+    background-size: contain
+    background-repeat: no-repeat
+    background-position:center
