--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -71,8 +71,7 @@ body(class="site")
 
     div(class="default center sub_page page_title" page_title="Welcome")
         div(class="welcome")
-            div
-                img(src="img/av.png")
+            div(class="img", style="width: 350px; height: 385px; background-image: url('img/av.jpg')")
             div(class="par")
                 p="I'm glorious, magnificent and lazy fella."
                 p="Things I love are: games, coding, cute girls, simple stuff and being lazy."
