--- a/app/styles/gallery.styl
+++ b/app/styles/gallery.styl
@@ -42,7 +42,7 @@ div.gallery
                     font-weight: 900
                     font-size: 1.2em
                 & > p.details
-                    text-align: left
+                    text-align: center
                     font-weight: 100
                     word-wrap: break-word
 
@@ -52,9 +52,6 @@ div.gallery
             & > div.img
                 height: 500px
                 margin-top: 20px
-                background-size: contain
-                background-repeat: no-repeat
-                background-position:center
 
                 @media screen and (max-height: 800px), screen and (max-width: 800px)
                     height: 300px
