--- a/app/templates/waifu.jade
+++ b/app/templates/waifu.jade
@@ -13,8 +13,8 @@ body()
         h1(class="center")="My Waifu Gallery"
         for item, idx in waifu
             - var cur_idx = idx + 1;
-            - var prev_idx = cur_idx === waifu.length ? "" : cur_idx - 1;
-            - var next_idx = cur_idx === waifu.length ? 1 :  cur_idx === (waifu.length - 1) ? cur_idx : cur_idx + 1;
+            - var prev_idx = cur_idx === waifu.length ? waifu.length - 1 : cur_idx - 1;
+            - var next_idx = cur_idx === waifu.length ? 1 :  cur_idx === (waifu.length - 1) ? "" : cur_idx + 1;
             - var link = item.link.replace('http', 'https');
             - var style_inner = util.format("background-image: url('%s')", link);
             - var div_page_class = cur_idx  === waifu.length ? "default sub_page flex" : "sub_page flex";
