CV: class cv2 -> cv

--- a/app/templates/cv.jade
+++ b/app/templates/cv.jade
@@ -38,7 +38,7 @@ mixin multi_line(line)
         | #{line.line}
 
 
-body(class="cv2")
+body(class="cv")
     header
         h1=data.name
         nav(class="lang_switcher")
