Add a bit of stuff to my goodies

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -53,7 +53,7 @@ body(class="site")
                 p=goodie.description
 
     div(class="sub_page flex goodies" id="Goodies_JS" page_title="My JavaScript code")
-        each goodie in goodies.node
+        each goodie in goodies.js
             a(class="goodie_link" href=goodie.link target="_blank")
                 p(class="title")=goodie.name
                 p=goodie.description
